deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusk8s2-service
spec:
  selector:
    app: otusk8s2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
