deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otusk8s2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(health)/?$
            pathType: Prefix
            backend:
              service:
                name: otusk8s2-service
                port:
                  number: 80
          - path: /otusapp/[\w.@+-]+/.*
            pathType: Prefix
            backend:
              service:
                name: otusk8s2-service
                port:
                  number: 80
